# perry

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  FEATURE_AUDIT.md  README.md  counter_web  hello_web  issue60_writeup.md  llms.txt  menu-demo.ts  run_llvm_sweep.sh  run_parity_tests.sh
.github/: FUNDING.yml
.github/workflows/: release-packages.yml  test.yml
android-build/: build.gradle.kts
android-build/app/: build.gradle.kts  google-services.json
benchmarks/: README.md  baseline.json  bench_fibonacci_phase2.ts  buffer_alloc_bench.ts  compare.sh  compare_backends.sh  llvm_vs_cranelift.md  quick.sh
benchmarks/json_polyglot/: RESULTS.md  bench.kt  run.sh
benchmarks/polyglot/: METHODOLOGY.md  RESULTS.md  RESULTS_AUTO.md  bench.cpp  bench.go  bench.java  bench.py  bench.rs  bench.swift  bench.zig  run_all.sh
benchmarks/suite/: bench_array_grow.ts  bench_buffer_readwrite.ts  (+6 more)
crates/perry/: Cargo.toml
crates/perry-codegen/: Cargo.toml
crates/perry-codegen-llvm/: Cargo.toml
crates/perry-codegen-llvm/src/: block.rs  boxed_vars.rs  codegen.rs  collectors.rs  expr.rs  function.rs  lib.rs  linker.rs  lower_array_method.rs  lower_call.rs  lower_string_method.rs  module.rs  runtime_decls.rs  stmt.rs  strings.rs  type_analysis.rs
crates/perry-codegen/src/: block.rs  boxed_vars.rs  classes.rs  closures.rs  codegen.rs  collectors.rs  expr.rs  function.rs  functions.rs  lib.rs  linker.rs  lower_array_method.rs  lower_call.rs  lower_conditional.rs  lower_string_method.rs  module.rs  module_init.rs  nanbox.rs  runtime_decls.rs  stmt.rs  strings.rs  stubs.rs  type_analysis.rs  types.rs  util.rs
crates/perry-codegen/src/lower_call/: builtin.rs  native.rs  ui_styling.rs
crates/perry-runtime/: Cargo.toml
crates/perry-runtime/src/: arena.rs  array.rs  bigint.rs  box.rs  buffer.rs  builtins.rs  child_process.rs  closure.rs  date.rs  error.rs  event_pump.rs  exception.rs  fs.rs  gc.rs  geisterhand_registry.rs  i18n.rs  json.rs  json_tape.rs  lib.rs  map.rs  math.rs  net.rs  object.rs  ohos_napi.rs  os.rs  path.rs  plugin.rs  process.rs  promise.rs  proxy.rs  redis_client.rs  regex.rs  set.rs  static_plugins.rs  string.rs  symbol.rs  text.rs  thread.rs  timer.rs  typedarray.rs  (+3 more)
crates/perry-ui-gtk4/: Cargo.toml
crates/perry-ui-gtk4/src/: app.rs  audio.rs  file_dialog.rs  geisterhand_style.rs  lib.rs  location.rs  menu.rs  state.rs  window.rs
crates/perry-ui-gtk4/src/widgets/: button.rs  image.rs  lazyvstack.rs  mod.rs  scrollview.rs  spacer.rs  splitview.rs  text.rs  textarea.rs  textfield.rs  vstack.rs
crates/perry-ui-ios/: Cargo.toml
crates/perry-ui-ios/src/: app.rs  camera.rs  lib.rs  location.rs  menu.rs  notifications.rs  state.rs  websocket.rs
crates/perry-ui-ios/src/widgets/: button.rs  mod.rs  scrollview.rs  spacer.rs  tabbar.rs  textarea.rs  textfield.rs
crates/perry-ui-macos/: Cargo.toml
crates/perry-ui-macos/src/: app.rs  audio_playback.rs  clipboard.rs  file_dialog.rs  geisterhand_style.rs  keychain.rs  lib.rs  menu.rs  notifications.rs  state.rs  string_header.rs
crates/perry-ui-macos/src/widgets/: button.rs  hstack.rs  image.rs  mod.rs  picker.rs  scrollview.rs  securefield.rs  slider.rs  table.rs  text.rs  textfield.rs  toggle.rs  toolbar.rs  vstack.rs
crates/perry-ui-watchos/: Cargo.toml
crates/perry-ui-watchos/src/: audio.rs  lib.rs  tree.rs
crates/perry-ui-watchos/src/widgets/: textarea.rs
crates/perry-ui-windows/: Cargo.toml
crates/perry-ui-windows/src/: app.rs  folder_dialog.rs  geisterhand_style.rs  layout.rs  lib.rs  menu.rs  state.rs  window.rs
crates/perry-ui-windows/src/widgets/: button.rs  hstack.rs  image.rs  mod.rs  text.rs  textfield.rs  vstack.rs
crates/perry-updater/: Cargo.toml
crates/perry-updater/src/: core.rs  desktop.rs  lib.rs
crates/perry-updater/tests/fixtures/: smoke.ts.tpl
crates/perry/src/: main.rs
crates/perry/src/commands/: check.rs  compile.rs  deps.rs  dev.rs  doctor.rs  fix_applier.rs  harmonyos_hap.rs  init.rs  mod.rs  publish.rs  run.rs  setup.rs  stdlib_features.rs  typecheck.rs
crates/perry/src/commands/compile/: collect_modules.rs  library_search.rs  link.rs  object_cache.rs  optimized_libs.rs  parse_cache.rs  resolve.rs  strip_dedup.rs  targets.rs
docs/: android-crash-fix-v0.4.29.md  generational-gc-plan.md  lazy-per-element-plan.md  memory-perf-roadmap.md  sso-migration-plan.md  typescript-compatibility-tests.md
scripts/: run_doc_tests.ps1  run_doc_tests.sh  run_memory_stability_tests.sh  run_simctl_tests.sh  smoke_updater.ps1  smoke_updater.sh
test-coverage/: COVERAGE.md  audit.sh
test-files/: test_array_of_objects.ts  test_bool_arithmetic.ts  test_buffer_small_alloc.ts  test_class_field_layout.ts  test_closure_capture_types.ts  test_edge_buffer_from_encoding.ts  test_edge_closure_module_map.ts  test_fs_appendfile.ts  test_gap_buffer_ops.ts  test_gap_class_advanced.ts  test_gap_closures.ts  test_gap_console_methods.ts  test_gap_encoding_timers.ts  test_gap_fetch_response.ts  test_gap_global_apis.ts  test_gap_map_set_extended.ts  test_gap_proxy_reflect.ts  test_gap_typed_arrays.ts  test_gap_typeof_instanceof.ts  test_gap_weakref_finalization.ts  test_interface_dispatch_edge.ts  test_issue58_object_string.ts  test_issue63_arr.ts  test_issue63_asm.ts  test_issue63_correctness.ts  test_issue63_escape.ts  test_issue_108.ts  test_issue_167_loop_alloca_stack_eat.ts  test_issue_221_module_array_index_set.ts  test_issue_233_async_array_param_push.ts  test_issue_234_blob_methods.ts  test_issue_235_method_default_param_padding.ts  test_issue_236_fetch_then_console_log.ts  test_issue_240_interface_dispatch.ts  test_issue_248_array_push_spread.ts  test_issue_248_phase2_js_interop.ts  test_issue_248_phase2b_js_callback.ts  test_issue_255_jsruntime_reentrancy.ts  test_issue_256_microtask_ordering.ts  test_issue_257_jsruntime_stub_no_v8.ts  (+23 more)
test-parity/: known_failures.json  threshold.json
tests/: test_android_labels.ts  test_android_main.ts  test_array_index_loop.sh  test_labels.ts  test_main_labels.ts  test_module_array_loop_read.ts
winget-manifests/: PerryTS.Perry.locale.en-US.yaml
(+247 files in other folders)
