[package]
name = "perry-ui-gtk4"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["rlib", "staticlib"]

[dependencies]
perry-ui = { path = "../perry-ui" }
perry-ui-testkit = { workspace = true }
perry-runtime = { path = "../perry-runtime" }
libc = "0.2"
gtk4 = { version = "0.9", features = ["v4_6"] }
cairo-rs = "0.20"

[features]
geisterhand = []
