[package]
name = "perry-ui-watchos"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["rlib", "staticlib"]

[features]
default = []
plugins = []
geisterhand = []

[dependencies]
perry-ui = { path = "../perry-ui" }
perry-runtime = { path = "../perry-runtime", default-features = false }
block2 = "0.6"
libc = "0.2"
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSString"] }
