[package]
name = "perry-updater"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Auto-updater for Perry desktop apps: manifest parsing, SHA-256 + Ed25519 verification, atomic install, sentinel-based rollback, detached relaunch. Desktop-only — mobile updates go through App Store / Play Store."

[lib]
crate-type = ["rlib", "staticlib"]

[dependencies]
perry-runtime = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
semver = "1.0"
sha2 = "0.10"
hex = "0.4"
base64 = "0.22"
# Ed25519 verify is provided by perry-stdlib::crypto (declared as extern in
# core.rs and resolved at static-link time inside libperry_stdlib.a) — no
# direct dep here keeps the dalek crate from being pulled in twice.

[dev-dependencies]
# Test code generates throwaway keypairs to exercise the verify path.
ed25519-dalek = "2.1"

# Detached spawn (the only thing this crate used libc for) now routes
# through perry_runtime::child_process::spawn_detached_command, so libc
# isn't a direct dep anymore.
