[package]
name = "perry"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Native TypeScript compiler - CLI driver"

[[bin]]
name = "perry"
path = "src/main.rs"

[dependencies]
perry-parser.workspace = true
swc_ecma_ast.workspace = true
perry-types.workspace = true
perry-hir.workspace = true
perry-transform.workspace = true
perry-codegen.workspace = true
perry-runtime.workspace = true
perry-diagnostics.workspace = true
perry-codegen-js.workspace = true
perry-codegen-swiftui.workspace = true
perry-codegen-glance.workspace = true
perry-codegen-wear-tiles.workspace = true
perry-codegen-wasm.workspace = true

clap.workspace = true
anyhow.workspace = true
log.workspace = true
env_logger.workspace = true
serde.workspace = true
serde_json.workspace = true
indicatif.workspace = true
console.workspace = true
dialoguer.workspace = true
toml.workspace = true
walkdir.workspace = true
atty.workspace = true
reqwest.workspace = true
tokio.workspace = true
tokio-tungstenite.workspace = true
futures-util.workspace = true
url.workspace = true
dirs.workspace = true
flate2.workspace = true
tar.workspace = true
base64.workspace = true
zip.workspace = true
jsonwebtoken = "9.3"
dotenvy = "0.15"
rayon = "1.10"
